Fix z-index issues

--- a/ui/src/assets/widgets/nodegraph.scss
+++ b/ui/src/assets/widgets/nodegraph.scss
@@ -57,7 +57,7 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  z-index: 4;
+  z-index: 3;
   pointer-events: auto;
   display: flex;
   gap: 8px;
@@ -210,7 +210,7 @@
   position: absolute;
   top: 6px;
   right: 6px;
-  // z-index: 1;
+  z-index: 1;
 }
 
 .pf-node-content {
@@ -379,5 +379,5 @@ svg {
   border: 2px solid var(--pf-color-accent);
   background: color-mix(in srgb, var(--pf-color-accent) 15%, transparent);
   pointer-events: none;
-  z-index: 3; // Render selection rectangle above nodes.
+  z-index: 2; // Render selection rectangle above nodes.
 }
